--- a/需求分析文档.md
+++ b/需求分析文档.md
@@ -36,21 +36,21 @@
    (2) 工作日志查询：输入查询指令，输出工作日志，从财产及工作日志数据库中获取操作信息；
 ### 用户交互设计
 #### 输入部分
-1. 注册：Setup <username> <user_type>
-2. 创建：Create <username> <user_type>
-3. 登录：Login <username>
-4. 图书录入： Add <ISBN> <name> <author> <key_words> <price>
-5. 修改： Update <type> <updated_string>
-6. 采购： Buy <ISBN> <num> <time>
-7. 采购信息查询：SearchBuy <begin> <end>
-8. 图书查询： SearchBook <type> <search_string>
-9. 图书购买： Sold <ISBN> <num>
+1. 注册：Setup "username" "user_type"
+2. 创建：Create "username" "user_type"
+3. 登录：Login "username"
+4. 图书录入： Add "ISBN" "name" "author" "key_words" "price"
+5. 修改： Update "type" "updated_string"
+6. 采购： Buy "ISBN" "num" "time"
+7. 采购信息查询：SearchBuy "begin" "end"
+8. 图书查询： SearchBook "type" "search_string"
+9. 图书购买： Sold "ISBN" "num"
 10. 销售情况：SearchSold
 11. 盈利查询：Get_value
 12. 工作日志查询：Get_work_diary
 #### 输出部分
 1. 权限不足： Sorry, you don't have this permission.
-2. 操作成功： <operate_name> completed!
-3. 日志输出： <the operation input> by <username>
-4. 盈利输出： The bookstore has earned <num>.
-5. 图书信息输出： <ISBN> <name> <author> <key_words> <price> <num>
+2. 操作成功： "operate_name" completed!
+3. 日志输出： "the operation input" by "username"
+4. 盈利输出： The bookstore has earned "num".
+5. 图书信息输出： "ISBN" "name" "author" "key_words" "price" "num"
