修改了部分指令不可见的问题

--- a/需求分析文档.md
+++ b/需求分析文档.md
@@ -47,10 +47,10 @@
 9. 图书购买： Sold "ISBN" "num"
 10. 销售情况：SearchSold
 11. 盈利查询：Get_value
-12. 工作日志查询：Get_work_diary
+12. 日志查询：Get_work_diary
 #### 输出部分
 1. 权限不足： Sorry, you don't have this permission.
 2. 操作成功： "operate_name" completed!
 3. 日志输出： "the operation input" by "username"
 4. 盈利输出： The bookstore has earned "num".
-5. 图书信息输出： "ISBN" "name" "author" "key_words" "price" "num"
+5. 图书信息输出： "ISBN" "name" "author" "key_words" "price" "num"    
