修改代码文件结构 增加finance.hpp文件

--- a/总体设计文档.md
+++ b/总体设计文档.md
@@ -19,7 +19,8 @@ Bookstore-2024-main
 │  ├── book.hpp
 │  ├── book.cpp
 │  ├── diary.hpp
-│  └── diary.cpp
+│  ├── diary.cpp
+│  └── finance.hpp
 ├── database
 │   ├── NodeHead for books
 │   ├── NodeBody for books
