修改了文件名字中间的空格

--- a/总体设计文档.md
+++ b/总体设计文档.md
@@ -22,14 +22,14 @@ Bookstore-2024-main
 │  ├── diary.cpp
 │  └── finance.hpp
 ├── database
-│   ├── NodeHead for books
-│   ├── NodeBody for books
-│   ├── Host for books
-│   ├── NodeHead for users
-│   ├── NodeBody for users
-│   ├── Host for users
+│   ├── NodeHead_for_books
+│   ├── NodeBody_for_books
+│   ├── Host_for_books
+│   ├── NodeHead_for_users
+│   ├── NodeBody_for_users
+│   ├── Host_for_users
 │   ├── Diary
-│   └── finance and other information
+│   └── finance
 └── main.cpp
 ```
 ### 功能设计
