--- a/总体设计文档.md
+++ b/总体设计文档.md
@@ -66,11 +66,11 @@ struct Book {
 #### 用户信息
 ```
 struct User{
-    int UserID;
-    int privilege;
-    bool login;
+    char UserID[31];
     char Password[31];
     char UserName[31];
+    int privilege;
+    bool login;
 }
 ```
 #### 图书信息块状链表
