增加了类的设计：用户操作类和书籍操作类

--- a/总体设计文档.md
+++ b/总体设计文档.md
@@ -59,9 +59,13 @@ struct Book {
     char BookName[31];
     char Author[31];
     char Keyword[61];
-    int Quantity;
-    double price;    
-}
+    int ISBN_len = 0;
+    int BookName_len = 0;
+    int Author_len = 0;
+    int Keyword_len;
+    int Quantity = 0;
+    double price = 0;
+};
 ```
 #### 用户信息
 ```
@@ -69,9 +73,12 @@ struct User{
     char UserID[31];
     char Password[31];
     char UserName[31];
+    int UserID_len;
+    int Password_len;
+    int UserName_len;
     int privilege;
     bool login;
-}
+};
 ```
 #### 图书信息块状链表
 ```
@@ -83,6 +90,45 @@ class NodeBody_for_Books{
     // Similar to 文件存储测试
 }
 ```
+#### 图书系统操作合集
+```
+class Book_Operation {
+    NodeHead_for_Books Head;
+    NodeBody_for_Books Body;
+    Book current_Book;
+    bool select = false;
+public:
+    Book_Operation();
+
+    ~Book_Operation();
+
+    void initialise();
+
+    void flush();
+
+    void addNode(int, Book);
+
+    void deleteNode(int);
+
+    void Select(const std::string &);
+
+    void Modify(int, const std::string &);
+
+    Book getBook(const std::string &);
+
+    void Insert(const std::string &);
+
+    void Import(int);
+
+    void Show(int, const std::string &);
+
+    double Buy(const std::string &, int);
+
+    int string_cmp(char*, char*, int, int);
+
+    double stringToDouble(const std::string &);
+};
+```
 #### 用户信息块状链表
 ```
 class NodeHead_for_Users{
@@ -93,3 +139,47 @@ class NodeBody_for_Users{
     // Similar to 文件存储测试
 }
 ```
+#### 账户系统操作合集
+```
+class User_Operation {
+    NodeHead_for_Users Head;
+    NodeBody_for_Users Body;
+    std::vector <User> login_stack;
+public:
+
+    User current_User;
+
+    User_Operation();
+
+    ~User_Operation();
+
+    void initialise();
+
+    void flush();
+
+    void addNode(int, User);
+
+    void deleteNode(int);
+
+    void Insert(
+        const std::string &,
+        const std::string &,
+        const std::string &,
+        int );
+
+    void Delete(const std::string &);
+
+    User getUser(const std::string &);
+
+    void changePassword(const std::string &, const std::string &, const std::string &);
+
+    void Login(const string &, const string &);
+
+    void Logout();
+
+    void Quit();
+
+    int string_cmp(char*, char*, int, int);
+};
+```
+待续……
