修改总体设计文档，删除不必要的文件

--- a/总体设计文档.md
+++ b/总体设计文档.md
@@ -21,14 +21,14 @@ Bookstore-2024-main
 │  ├── diary.hpp
 │  ├── diary.cpp
 │  └── finance.hpp
-├── database
+├── cmake-build-debug
 │   ├── NodeHead_for_books
 │   ├── NodeBody_for_books
 │   ├── Host_for_books
 │   ├── NodeHead_for_users
 │   ├── NodeBody_for_users
 │   ├── Host_for_users
-│   ├── Diary
+│   ├── diary
 │   └── finance
 └── main.cpp
 ```
@@ -95,9 +95,14 @@ class NodeBody_for_Books{
 class Book_Operation {
     NodeHead_for_Books Head;
     NodeBody_for_Books Body;
-    Book current_Book;
-    bool select = false;
+    name_operation name_op;
+    author_operation author_op;
+    keyword_operation keyword_op;
 public:
+
+    std::vector<Book> book_stack;
+    Book current_Book;
+
     Book_Operation();
 
     ~Book_Operation();
@@ -106,27 +111,35 @@ public:
 
     void flush();
 
-    void addNode(int, Book);
+    static void addNode(int, Book);
 
-    void deleteNode(int);
+    static void deleteNode(int);
 
     void Select(const std::string &);
 
-    void Modify(int, const std::string &);
+    void Modify(const std::string &);
 
     Book getBook(const std::string &);
 
     void Insert(const std::string &);
 
-    void Import(int);
+    void Insert_(Book);
+
+    void Delete();
+
+    bool Import(int);
 
     void Show(int, const std::string &);
 
     double Buy(const std::string &, int);
 
-    int string_cmp(char*, char*, int, int);
+    static std::vector<std::string> Key_Split(const std::string &);
 
-    double stringToDouble(const std::string &);
+    static bool checkValidity(const std::string &);
+
+    static int string_cmp(char*, char*, int, int);
+
+    static double stringToDouble(const std::string &);
 };
 ```
 #### 用户信息块状链表
@@ -147,7 +160,7 @@ class User_Operation {
     std::vector <User> login_stack;
 public:
 
-    User current_User;
+    User current_User{};
 
     User_Operation();
 
@@ -157,9 +170,9 @@ public:
 
     void flush();
 
-    void addNode(int, User);
+    static void addNode(int, User);
 
-    void deleteNode(int);
+    static void deleteNode(int);
 
     void Insert(
         const std::string &,
@@ -179,7 +192,67 @@ public:
 
     void Quit();
 
-    int string_cmp(char*, char*, int, int);
+    static bool checkValidity(const std::string &);
+
+    static int string_cmp(char*, char*, int, int);
 };
 ```
-待续……
+#### 操作存储结构体
+````
+struct Operation {
+    char UserID[31];
+    char op[301];
+    int UserID_len;
+    int op_len;
+};
+````
+
+#### 日志系统
+````
+class Diary {
+    fstream file;
+    std::string file_name;
+    Operation *operation;
+public:
+    Diary() = default;
+
+    Diary(const std::string &file_name);
+
+    ~Diary();
+
+    void addLog(const std::string &UserID, const std::string &op);
+
+    void printLog();
+
+    void reportEmployee();
+
+    void reportFinance();
+};
+````
+#### 交易记录结构体
+````
+struct Record {
+    int type;
+    double amount;
+};
+````
+
+#### 交易系统
+````
+class Finance {
+    std::fstream file;
+    std::string file_name;
+    Record* record;
+public:
+    Finance() = default;
+
+    Finance(const std::string &file_name);
+
+    ~Finance();
+
+    void readFinance(int count);
+
+    void writeFinance(int type, double finance);
+
+};
+````
